--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -10,8 +10,8 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [{
-  text:"サービス一覧",
-  link:"#"
+text:"サービス一覧",
+link:"#"
 }] %}
 
 {# Custom tags before </head> #}
@@ -42,8 +42,8 @@
             規模別
           </div>
           <div class="right-content">
-             <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
-             <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+            <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
+            <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
           </div>
         </div>
         <div class="card-section by-purpose">
@@ -51,8 +51,8 @@
             目的別
           </div>
           <div class="right-content">
-             <a href="#" class="bondi_green_outline_btn">個人事業主様向け</a>
-             <a href="#" class="bondi_green_outline_btn">中小企業様向け</a>
+            <a href="#" class="bondi_green_outline_btn">個人事業主様向け</a>
+            <a href="#" class="bondi_green_outline_btn">中小企業様向け</a>
           </div>
         </div>
       </div>
@@ -80,14 +80,14 @@
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service1.png" alt="cast flow">
+          <img src="/assets/img/service_page/service2.png" alt="cast flow">
           <div class="content">
             <div class="title">
-              <span class="secondary">法人与信型ビジネスカード</span>
-              セゾンプラチナ・ビジネス プロアメリカン・エキスプレス®・カード
+              <span class="primary">法人与信型ビジネスカード</span>
+              セゾンゴールド・ビジネス プロ・カード
             </div>
             <div class="description">
-              中小企業様の経営と事業成長を強力にサポートする一枚。
+              ビジネスにさらなる安心を与える一枚。
             </div>
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
@@ -97,14 +97,14 @@
           </div>
         </div>
         <div class="card-section">
-          <img src="/assets/img/service_page/service1.png" alt="cast flow">
+          <img src="/assets/img/service_page/service3.png" alt="cast flow">
           <div class="content">
             <div class="title">
-              <span class="blue">スカード</span>
-              セゾンプラチナ・ビジネス プロアメリカン・エキスプレス®・カード
+              <span class="primary">法人与信型ビジネスカード</span>
+              セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード
             </div>
             <div class="description">
-              中小企業様の経営と事業成長を強力にサポートする一枚。
+              効率化とコスト削減を目指すならこの一枚。
             </div>
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
@@ -113,6 +113,155 @@
             </div>
           </div>
         </div>
+        <div class="card-section">
+          <img src="/assets/img/service_page/service4.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="secondary">個人与信型ビジネスカード</span>
+              セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カード
+            </div>
+            <div class="description">
+              個人与信型ビジネスカード
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-section">
+          <img src="/assets/img/service_page/service5.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="secondary">個人与信型ビジネスカード</span>
+              セゾンコバルト・ビジネス・アメリカン・エキスプレス®・カード
+            </div>
+            <div class="description">
+              初めてのビジネスカードに。シンプルなこの一枚。
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-section">
+          <img src="/assets/img/service_page/service6.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="blue">請求書カード払いサービス</span>
+              セゾンインボイス
+            </div>
+            <div class="description">
+              毎⽉の請求業務を最短15分に短縮！未⼊⾦対応をゼロに
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-section">
+          <img src="/assets/img/service_page/service7.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="blue">請求書カード払いサービス</span>
+              支払い.com
+            </div>
+            <div class="description">
+              すべての支払いを、最長60日後にカードで先延ばし!
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-section">
+          <img src="/assets/img/service_page/service8.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="blue">請求書カード払いサービス</span>
+              セゾンフクリコ
+            </div>
+            <div class="description">
+              従業員が喜ぶ優待メニューが充実!月額385円～/人で。!
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-section">
+          <img src="/assets/img/service_page/service8.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="blue">ビジネスサポートローン</span>
+              セゾンフクリコ
+            </div>
+            <div class="description">
+              まとまった資金を低金利で!
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+            </div>
+          </div>
+        </div>
+        <div class="card-section">
+          <img src="/assets/img/service_page/service9.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="blue">ローンサービス</span>
+              ビジネスサポートローン
+            </div>
+            <div class="description">
+              まとまった資金を低金利で!
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+            </div>
+          </div>
+        </div> 
+        <div class="card-section">
+          <img src="/assets/img/service_page/service10.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="blue">経費精算・管理クラウド</span>
+              Concur Expense
+            </div>
+            <div class="description">
+              仮払い・立替払いを廃止！経費精算を自動化できる!
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+            </div>
+          </div>
+        </div> 
+        <div class="card-section">
+          <img src="/assets/img/service_page/service11.png" alt="cast flow">
+          <div class="content">
+            <div class="title">
+              <span class="blue">出張手配サービス</span>
+              CosPro
+            </div>
+            <div class="description">
+              出張手配の問題をまるごと解決!
+            </div>
+            <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
+              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+            </div>
+          </div>
+        </div>         
       </div>
     </div>
   </section>
