--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -175,8 +175,8 @@ link:"#"
               すべての支払いを、最長60日後にカードで先延ばし!
             </div>
             <div class="list-button">
+              <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
-              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
               <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
               <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
@@ -186,27 +186,11 @@ link:"#"
           <img src="/assets/img/service_page/service8.png" alt="cast flow">
           <div class="content">
             <div class="title">
-              <span class="blue">請求書カード払いサービス</span>
+              <span class="blue">福利厚生サービス</span>
               セゾンフクリコ
             </div>
             <div class="description">
               従業員が喜ぶ優待メニューが充実!月額385円～/人で。!
-            </div>
-            <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
-              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
-            </div>
-          </div>
-        </div>
-        <div class="card-section">
-          <img src="/assets/img/service_page/service8.png" alt="cast flow">
-          <div class="content">
-            <div class="title">
-              <span class="blue">ビジネスサポートローン</span>
-              セゾンフクリコ
-            </div>
-            <div class="description">
-              まとまった資金を低金利で!
             </div>
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
@@ -229,7 +213,7 @@ link:"#"
               <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
             </div>
           </div>
-        </div> 
+        </div>
         <div class="card-section">
           <img src="/assets/img/service_page/service10.png" alt="cast flow">
           <div class="content">
@@ -245,7 +229,7 @@ link:"#"
               <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
             </div>
           </div>
-        </div> 
+        </div>
         <div class="card-section">
           <img src="/assets/img/service_page/service11.png" alt="cast flow">
           <div class="content">
@@ -261,7 +245,7 @@ link:"#"
               <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
             </div>
           </div>
-        </div>         
+        </div>
       </div>
     </div>
   </section>
