update transition blue gradient button

--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -812,13 +812,20 @@
   font-weight: 500;
   text-align: center;
   padding: 12px 35px;
-  background: $gradient-bg;
   box-shadow: none;
   position: relative;
   border-radius: 3px;
   margin: 0 auto;
   border: none;
-  transition: all 0.3s;
+  transition: 0.7s;
+  background-size: 200% auto;
+  background-image: linear-gradient(
+    60deg,
+    #0497b5 0%,
+    #53d2b2 50%,
+    #0497b5 100%
+  );
+
   @media #{$sp} {
     font-size: 14px;
     padding: 13px;
@@ -843,7 +850,8 @@
   }
   &:hover {
     opacity: 1;
-    background: $gradient-bg-reverse;
+    background-position: right;
+
     color: #fff;
     &::before {
       border-top: 2px solid #fff;
