--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -44,7 +44,7 @@ $blue-color: #0497b5;
 $blue-color-1: #00758c;
 $blue-color-2: #e5f4f8;
 $blue-color-3: #004098;
-$blue-color-4: #014A58;
+$blue-color-4: #014a58;
 
 $green-color: #007477;
 $green-color-1: #53d2b2;
@@ -59,6 +59,7 @@ $gray-color-5: #666666;
 $gray-color-6: #00000029;
 $gray-color-7: #eeeeee;
 $gray-color-8: #797979;
+$gray-color-9: #f5f5f5;
 
 $yellow-color: #ffff01;
 $yellow-color-1: #EDF8E5;
