--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1043,6 +1043,13 @@
           );
         }
       }
+
+      .ttl-quinary {
+        color: $primary-color;
+        font-weight: bold;
+        font-size: 15px;
+        text-align: center;
+      }
     }
 
     .card-image {
@@ -2183,6 +2190,107 @@
 
   a:before {
     display: none;
+  }
+}
+
+.card-type24 {
+  width: auto;
+
+  .card {
+    border: 0;
+    padding: 30px;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 20px #00000029;
+    height: 100%;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    @media #{$sp} {
+      padding: 15px;
+    }
+
+    .ttl-quaternary {
+      font-size: 20px;
+      font-weight: 600;
+      margin: 0;
+      text-align: center;
+      color: $primary-color;
+
+      strong {
+        background: linear-gradient(
+          to bottom,
+          transparent 70%,
+          $yellow-color 30%
+        );
+      }
+    }
+
+    .ttl-quinary {
+      color: $primary-color;
+      font-weight: bold;
+      font-size: 15px;
+      text-align: center;
+    }
+
+    .card-index {
+      position: absolute;
+      top: -19px;
+      left: calc(50% - 100px);
+      background-color: #000000;
+      color: $white-color;
+      border-radius: 25px;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 7px 68px;
+    }
+
+    .card-image {
+      margin-bottom: 10px;
+    }
+
+    .card-description {
+      margin-bottom: 18px;
+      flex-grow: 1;
+
+      &__detail {
+        display: flex;
+        align-items: baseline;
+        gap: 6px;
+        svg {
+          width: 20px;
+        }
+        span {
+          width: calc(100% - 20px);
+        }
+      }
+    }
+
+    .circle-with-arrow {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: $primary-color;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      margin: auto;
+    }
+
+    .arrow-down {
+      width: 16px;
+      height: 16px;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+      margin-bottom: 10px;
+      border-right: 3px solid #fff;
+      border-bottom: 3px solid #fff;
+      position: absolute;
+      transition: all 0.3s;
+    }
   }
 }
 
