--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -1,39 +1,46 @@
 .saison-invoice-page {
   section {
-    .ttl-notice {
-      font-size: 14px;
-      color: $primary-color;
-      margin-bottom: 45px;
+    &.bg-gray {
+      background: $gray-color-9;
+      padding: 70px 0;
     }
+    .ttl-secondary {
+      font-size: 16px;
+      color: $primary-color;
+      margin-bottom: 40px;
+      text-align: center;
+
+      @media #{$sp} {
+        margin-bottom: 20px;
+      }
+    }
+
     .ttl-primary {
       font-size: 32px;
-      span {
-        font-size: 15px;
-      }
-      @media #{$sp} {
-        font-size: 20px;
-        text-align: center !important;
-      }
-    }
-    .ttl-quaternary {
+      margin-bottom: 40px;
       text-align: center;
-      margin-bottom: 70px;
-      .font-weight-normal {
-        font-weight: normal;
-      }
+      font-weight: bold;
+
       @media #{$sp} {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        font-size: 26px;
       }
     }
-    .yellow-underline {
-      background: linear-gradient(
-        180deg,
-        rgba(0, 0, 0, 0) 70%,
-        $yellow-color 0
-      );
-    }
-    .primary-txt {
-      color: $primary-color;
+
+    .ttl-tertiary {
+      font-size: 20px;
+      text-align: center;
+      font-weight: normal;
+
+      &.bold {
+        font-weight: bold;
+      }
+
+      a {
+        color: $primary-color;
+        text-decoration: underline;
+        text-underline-offset: 4px;
+      }
     }
   }
 
@@ -74,6 +81,10 @@
         transform: skewX(15deg);
         color: #ffffff;
         margin-bottom: 0;
+
+        @media #{$sp} {
+          white-space: pre;
+        }
       }
     }
 
@@ -87,10 +98,6 @@
       border-radius: inherit;
       overflow: hidden;
       background: $primary-color;
-
-      @media #{$sp} {
-        height: auto;
-      }
 
       img {
         position: static;
@@ -247,180 +254,86 @@
   }
 
   .section-primary {
-    padding: 74px 0 130px 0;
+    text-align: center;
+    padding: 60px 120px 70px;
 
     @media #{$sp} {
-      padding: 70px 0;
+      padding: 35px 15px;
     }
 
-    img {
-      object-fit: contain;
+    .section-primary-wrapper {
+      .containers {
+        max-width: unset;
+        padding: 0;
+      }
+    }
+
+    .saison-introduce {
+      padding: 30px;
+      margin: 60px 20px 0 20px;
+      background-color: $primary-color;
+      color: $white-color;
+      border-radius: 3px;
+
+      display: grid;
+      grid-template-columns: 30% 70%;
+      gap: 30px;
+
+      @media #{$sp} {
+        grid-template-columns: auto;
+        margin: 30px -15px 0 -15px;
+        padding: 30px 15px;
+      }
+
+      &-video {
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      &-description {
+        text-align: left;
+
+        .ttl-quaternary {
+          margin-bottom: 20px;
+        }
+
+        .ttl-tertiary {
+          margin-bottom: 10px;
+        }
+      }
     }
   }
 
-  .section-secondary {
-    .section-secondary-content {
-      margin: 50px 0 70px 0;
-      .card {
-        position: relative;
-        width: 380px;
-        border-radius: 3px;
-        box-shadow: 0px 3px 20px #0000001c;
-        padding: 32px 30px 30px;
-        .black_pill_btn {
-          position: absolute;
-          display: inline-block;
-          border-radius: 24px;
-          top: -15px;
-          left: 50%;
-          transform: translateX(-50%);
-        }
-        .ttl-quinary {
-          font-size: 20px;
-          font-weight: bold;
-          line-height: 29px;
-          text-align: center;
-          color: $blue-color;
-          .yellow-underline {
-            background: linear-gradient(
-              180deg,
-              rgba(0, 0, 0, 0) 70%,
-              #ffff01 0
-            );
-          }
-        }
-        img {
-          width: 100%;
-          height: 179px;
-          object-fit: cover;
-          margin: 20px 0;
-        }
-        .card-description {
-          li {
-            font-size: 16px;
-          }
-        }
-        @media #{$sp} {
-          width: 100%;
-        }
+  .section-secondary,
+  .section-quinary {
+    background: $gray-color-9;
+    padding: 42px 0 76px;
+
+    .content {
+      margin-top: 40px;
+      text-align: center;
+
+      img {
+        width: auto;
+      }
+      @media #{$sp} {
+        margin-top: 10px;
       }
     }
   }
 
   .section-tertiary {
-    color: $white-color;
-    background-color: $blue-color-4;
-    padding: 70px 0 80px 0;
-    .section-tertiary-container {
-      margin: auto;
-      text-align: center;
-      .ttl-primary {
-        font-size: 32px;
-        margin-bottom: 100px;
-        @media #{$sp} {
-          font-size: 20px;
-          margin-bottom: 130px;
-        }
-      }
-      .act-more {
-        margin-left: 0;
-        position: relative;
-        padding: 14px 64px 14px 48px;
-        white-space: nowrap;
-
-        &-tooltip {
-          position: absolute;
-          width: auto;
-          top: -65px;
-          white-space: nowrap;
-          left: 50%;
-          transform: translateX(-50%);
-
-          &__content {
-            position: relative;
-            width: fit-content;
-            font-size: 20px;
-            margin-bottom: 25px;
-            background-color: transparent;
-            border-radius: 3px;
-            color: $white-color;
-            border: 1px solid white;
-            padding: 10px 20px;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            @media #{$sp} {
-              font-size: 16px;
-              white-space: pre;
-              top: -35px;
-            }
-
-            &::before {
-              position: absolute;
-              content: "\A";
-              top: calc(100% - 1px);
-              left: calc(50% - 15px);
-              width: 0;
-              height: 0;
-              border-left: 15px solid transparent;
-              border-right: 15px solid transparent;
-              border-top: 10px solid #fff;
-            }
-          }
-        }
-
-        &-content {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          .act-more-content-img {
-            position: relative;
-            display: block;
-            width: 153px;
-            height: 90px;
-            margin-bottom: 30px;
-            img {
-              width: 115px;
-              height: 100%;
-              &.primary-img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: 2;
-              }
-              &.secondary-img {
-                position: absolute;
-                bottom: -10px;
-                right: 0;
-                z-index: 1;
-              }
-            }
-          }
-          .act-more-content-btn {
-            height: auto;
-            @media #{$sp} {
-              width: 100%;
-              a {
-                font-size: 14px;
-                padding: 13px 35px;
-              }
-            }
-          }
-
-          @media #{$sp} {
-            flex-direction: column;
-          }
-        }
-
-        @media #{$sp} {
-          padding: 0;
-        }
-      }
-    }
+    padding: 60px 120px 70px;
     @media #{$sp} {
-      padding: 50px 15px;
+      padding: 35px 15px;
+    }
+
+    .card-type24 {
+      .ttl-quaternary {
+        margin-top: 10px;
+      }
     }
   }
 
@@ -430,9 +343,7 @@
     @media #{$sp} {
       padding-top: 0;
     }
-    .ttl-notice {
-      margin-bottom: 25px;
-    }
+
     .section-quaternary-content {
       display: flex;
       flex-direction: column;
@@ -497,73 +408,145 @@
           }
         }
       }
-      .information {
-        display: inline-block;
-        padding: 14px 66px;
-        font-size: 20px;
-        background-color: $blue-color-2;
-        border-radius: 3px;
-        margin: 60px 0 105px;
+    }
+  }
 
-        @media #{$sp} {
-          padding: 15px;
-        }
+  .section-flow {
+    .flow-container {
+      display: grid;
+      grid-template-columns: 35% 35% 30%;
+      box-shadow: 0 3px 20px rgba(0, 0, 0, 0.1607843137254902);
+      background: #fff;
 
-        span {
-          font-weight: bold;
-        }
+      @media #{$sp} {
+        grid-template-columns: 38% 38% 26%;
       }
-      .act-more {
-        margin: auto;
-        position: relative;
-        padding: 14px 64px 14px 48px;
-        white-space: nowrap;
-        background: $gradient-bg;
 
-        &-tooltip {
-          position: absolute;
-          width: auto;
-          top: -65px;
-          white-space: nowrap;
-          left: 50%;
-          transform: translateX(-50%);
+      .flow-item {
+        position: relative;
+        display: inline-block;
+        padding-right: 24px;
+        padding-left: 0;
+        filter: drop-shadow(10px 0px 4px #00000029);
+
+        &:last-child {
+          padding: 0;
+          .flow-item-detail {
+            clip-path: unset;
+          }
+        }
+
+        &-detail {
+          position: relative;
+          padding: 30px 60px 30px 20px;
+          height: 100%;
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          background: $white-color;
+          clip-path: polygon(
+            0 0,
+            calc(100% - 2em) 0,
+            100% 50%,
+            calc(100% - 2em) 100%,
+            0 100%,
+            0 0
+          );
 
           @media #{$sp} {
-            top: -90px;
+            padding: 10px 23px 10px 10px;
+            margin-left: -5px;
+            clip-path: polygon(0 0, 90px 0, 100% 50%, 90px 100%, 0 100%, 0 0);
           }
 
-          &__content {
-            position: relative;
-            width: fit-content;
-            font-size: 14px;
-            font-weight: 600;
-            margin-bottom: 25px;
-            background-color: #fff;
-            border-radius: 3px;
-            border: 1px solid $primary-color;
-            color: $primary-color;
-            padding: 10px 20px;
+          img {
+            width: auto;
+          }
+          .flow-item-image {
+            flex-grow: 1;
+          }
+        }
 
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        &-desc {
+          margin-top: 20px;
+          flex-grow: 1;
+
+          @media #{$sp} {
+            font-size: 12px;
+          }
+        }
+
+        &:first-child {
+          border-top-left-radius: 3px;
+          border-bottom-left-radius: 3px;
+        }
+
+        &:last-child {
+          border-top-right-radius: 3px;
+          border-bottom-right-radius: 3px;
+          clip-path: unset;
+
+          .flow-item-detail {
+            padding: 30px 35px 30px 30px;
 
             @media #{$sp} {
-              white-space: pre;
-            }
-
-            &::before {
-              position: absolute;
-              content: "\A";
-              top: calc(100% - 1px);
-              left: calc(50% - 15px);
-              width: 0;
-              height: 0;
-              border-left: 15px solid transparent;
-              border-right: 15px solid transparent;
-              border-top: 10px solid $primary-color;
+              padding: 5px 10px 5px 5px;
             }
           }
+        }
+      }
+    }
+  }
+
+  .section-usage {
+    padding: 60px 0 70px;
+
+    .scene {
+      padding: 20px;
+      border-radius: 10px;
+      background: $primary-color;
+      color: $white-color;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+
+      &.seagreen {
+        background-color: #25A5A5;
+      }
+
+      &.green {
+        background-color: #44B397;
+      }
+
+      &-name {
+        background: #000;
+        border-radius: 25px;
+        text-align: center;
+      }
+      &-desc {
+        font-size: 24px;
+        font-weight: bold;
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &-cost {
+        font-weight: bold;
+        font-size: 58px;
+        color: $yellow-color;
+        span {
+          font-size: 32px;
+        }
+      }
+
+    }
+
+    .section-more {
+      .act-more-tooltip {
+        @media #{$sp} {
+          top: -115px;
         }
       }
     }
@@ -577,201 +560,69 @@
     }
   }
 
-  .section-voice {
-    text-align: center;
-    padding: 70px 0;
-    background-color: #fff;
 
-    @media #{$sp} {
-      padding: 35px 15px;
-    }
-
-    .ttl-sub {
-      font-size: 14px;
-      font-weight: bold;
-      font-family: "Futura";
-      color: $primary-color;
-    }
-
-    .ttl-secondary {
-      font-size: 32px;
-      margin-bottom: 61px;
-      @media #{$sp} {
-        margin-bottom: 25px;
-      }
-    }
-  }
-
-  .section-question-and-answer {
-    text-align: center;
-    padding: 60px 0px 70px;
-    background: #f5f5f5;
-    margin: auto;
-
-    @media #{$sp} {
-      padding: 35px 15px;
-    }
-
-    &__description {
-      font-size: 20px;
-      line-height: 35px;
-
-      a {
-        text-decoration: underline;
-        color: $primary-color;
-      }
-
-      @media #{$sp} {
-        font-size: 16px;
-      }
-    }
-
-    &__list {
-      margin-bottom: 50px;
-    }
-
-    .ttl-sub {
-      font-size: 14px;
-      font-weight: bold;
-      font-family: "Futura";
-      color: $primary-color;
-    }
-
-    .ttl-secondary {
-      font-size: 32px;
-      margin-bottom: 61px;
-
-      @media #{$sp} {
-        margin-bottom: 25px;
-      }
-    }
-
-    .question-tab,
-    .answer-tab {
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-      padding: 4px 30px;
-      width: 100%;
-      margin-bottom: 30px;
-
-      @media #{$sp} {
-        padding: 4px 8px;
-      }
-
-      .ttl-secondary {
-        font-size: 30px;
-        margin-bottom: 0;
-      }
-
-      .qa-content {
-        flex: 1;
-
-        .ttl-tertiary {
-          text-align: left;
-          font-size: 20px;
-          margin-bottom: 0;
-          font-weight: 400;
-
-          @media #{$sp} {
-            font-size: 16px;
-          }
-        }
-      }
-
-      .qa-button {
-        svg {
-          margin-top: 5px;
-        }
-        .svg__minus {
-          display: none;
-        }
-        &.open {
-          .svg__plus {
-            display: none;
-          }
-          .svg__minus {
-            display: block;
-          }
-        }
-      }
-    }
-
-    .question-tab {
-      margin-top: 50px;
-
-      cursor: pointer;
-      background: $blue-color-2 0% 0% no-repeat padding-box;
-      box-shadow: 0px 3px 20px #00000029;
-
-      .qa-marker {
-        color: $primary-color;
-      }
-
-      .qa-content {
-        .ttl-tertiary {
-          font-weight: bold;
-        }
-      }
-
-      @media #{$sp} {
-        margin-top: 30px;
-        margin-bottom: 0;
-      }
-    }
-
-    .question-tab.open {
-      svg {
-        display: none;
-      }
-    }
-
-    .answer-tab {
-      background-color: #ffffff;
-      margin-top: -30px;
-      padding: 0 60px 0 30px;
-      display: none;
-
-      @media #{$sp} {
-        padding: 8px;
-        margin-top: 0;
-      }
-
-      .qa-marker {
-        color: $green-color-1;
-      }
-    }
-  }
-
-  .section-contact {
-    .ttl-notice {
-      font-family: "Futura";
-      margin-bottom: 0;
-      color: $white-color;
-    }
-
-    .card-type22 .useful-wp .containers .card .card__box {
-      padding: 38px 44px;
-      @media #{$sp} {
-        padding: 30px 15px;
-      }
-
-      .card__box--ttl {
-        font-size: 20px;
-      }
-
-      .card__box--cont {
-        margin-bottom: 30px;
-        .card__box--txt {
-          text-align: left;
-        }
-      }
-    }
-  }
 
   // ===========END SECTIONS==========
 
-  .section-primary__wrapper {
+  // =========SUPPORT SECTIONS========
+  .section-more {
+    margin-top: 130px;
+    .act-more {
+      margin: auto;
+      position: relative;
+      padding: 14px 64px 14px 48px;
+      white-space: nowrap;
+      background: $gradient-bg;
+
+      &-tooltip {
+        position: absolute;
+        width: auto;
+        top: -65px;
+        white-space: nowrap;
+        left: 50%;
+        transform: translateX(-50%);
+
+        @media #{$sp} {
+          top: -90px;
+        }
+
+        &__content {
+          position: relative;
+          width: fit-content;
+          font-size: 14px;
+          font-weight: 600;
+          margin-bottom: 25px;
+          background-color: #fff;
+          border-radius: 3px;
+          border: 1px solid $primary-color;
+          color: $primary-color;
+          padding: 10px;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          @media #{$sp} {
+            white-space: pre;
+          }
+
+          &::before {
+            position: absolute;
+            content: "\A";
+            top: calc(100% - 1px);
+            left: calc(50% - 15px);
+            width: 0;
+            height: 0;
+            border-left: 15px solid transparent;
+            border-right: 15px solid transparent;
+            border-top: 10px solid $primary-color;
+          }
+        }
+      }
+    }
+  }
+
+  .list__wrapper {
     .containers {
       max-width: unset;
       padding: 0;
@@ -784,6 +635,7 @@
         justify-content: center;
         a.card {
           transition: all 0.3s;
+          gap: 20px;
           .arrow-down {
             transition: all 0.3s;
           }
@@ -797,6 +649,7 @@
         }
         .card-type6 {
           .ttl-quaternary-container {
+            display: grid;
             margin-bottom: 0;
           }
         }
