fix page saison_invoice

--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -53,7 +53,7 @@
   <main class="saison-invoice-page">
   <section id="top" class="section-welcome fadein">
     <div class="section-welcome__banner">
-      <img src="/assets/img/common/banner_service.png"/>
+      <img src="/assets/img/saison_invoice/saison_invoice_banner.png"/>
     </div>
 
     <div class="section-welcome-info">
@@ -91,18 +91,14 @@
         </div>
       </div>
 
-      <div class="section-welcome-right-sp sp-only">
+      <div class="section-welcome-info-right-sp sp-only">
         <img src="/assets/img/saison_invoice/saison-invoice_inner.png"/>
 
         <ul class="info-list">
-          <li><span class="special">最短1日後</span>の振り込みに対応！※1</li>
-          <li><span class="special">一律4%</span>のお得な手数料</li>
-          <li>サービス開始1年で導入企業数 <span class="special">20,000社</span>突破！</li>
+          <li class="info-item">月額固定費0円・手数料率は<span class="special">業界最低水準！</span></li>
+          <li class="info-item">請求から回収業務の督促まで<span class="special">すべて委託！</span></li>
+          <li class="info-item">最短翌日入金で、<span class="special">キャッシュフローも改善</span></li>
         </ul>
-        <div class="info-note-sp">
-          <span class="text-muted">※1 …UPSIDERカード・セゾンカード利用で</span>
-          <span class="text-muted">　前営業日正午までに振り込みを行った場合</span>
-        </div>
       </div>
     </div>
   </section>
@@ -164,7 +160,7 @@
       <div class="container">
         <div class="saison-introduce">
           <div class="saison-introduce-video">
-            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe></iframe>
           </div>
 
           <div class="saison-introduce-description">
@@ -284,6 +280,59 @@
     <section class="section-quaternary fadein">
       <h4 class="ttl-secondary">セゾンインボイスの特長</h4>
       <h2 class="ttl-primary">請求・回収代行はもちろん、キッシュフロー改善もサポート</h2>
+      <div class="container">
+        <ul class="saison-feature-list">
+          <li class="card-type25">
+            <div class="card-heading">
+              <span class="card-index">お悩み①</span>
+              <h3 class="card-issue-title"><span>請求・回収業務に人と時間が奪われてしまう</span></h3>
+            </div>
+            <div class="triangle"></div>
+            <h1 class="card-solution-title">請求業務はすべて代行。毎⽉の請求業務が<span>最短15分で完</span>了！</h1>
+            <div class="card-solution-content">
+              <div class="card-solution-content__img">
+                <img src="/assets/img/saison_invoice/saison_solution1.png" />
+              </div>
+              <div class="card-solution-content__text">
+                顧客を登録し、取引情報を入力するだけ。与信審査、請求書作成・発行、入金確認、督促まですべてクレディセゾンが代行いたします。
+              </div>
+            </div>
+          </li>
+          <li class="card-type25">
+            <div class="card-heading">
+              <span class="card-index">お悩み②</span>
+              <h3 class="card-issue-title"><span>取引先の業績悪化による未払いのリスク</span></h3>
+            </div>
+            <div class="triangle"></div>
+            <h1 class="card-solution-title">未払いでも全額振込。<span>未回収リスク100%保証</span>。</h1>
+            <div class="card-solution-content">
+              <div class="card-solution-content__img">
+                <img src="/assets/img/saison_invoice/saison_solution2.png" />
+              </div>
+              <div class="card-solution-content__text">
+                顧客の与信枠内であれば、その後未払いになったとしても貴社に振込。</br>
+                取引先の未払い等の経営リスクを縮小可能です。
+              </div>
+            </div>
+          </li>
+          <li class="card-type25">
+            <div class="card-heading">
+              <span class="card-index">お悩み③</span>
+              <h3 class="card-issue-title"><span>支払い日までの運転資金確保が大変</span></h3>
+            </div>
+            <div class="triangle"></div>
+            <h1 class="card-solution-title">最短翌日の入金<span>で、運転資金をスピード確保。</span>。</h1>
+            <div class="card-solution-content">
+              <div class="card-solution-content__img">
+                <img src="/assets/img/saison_invoice/saison_solution3.png" />
+              </div>
+              <div class="card-solution-content__text">
+                顧客情報、取引内容を入力するだけ。与信審査、請求書作成・発行、入金確認、督促まですべてクレディセゾンが代行いたします。
+              </div>
+            </div>
+          </li>
+        <ul>
+      </div>
     </section>
 
     <section class="section-quinary fadein">
