--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -2294,6 +2294,104 @@
   }
 }
 
+.card-type25 {
+  width: 100%;
+  box-shadow: 0px 3px 20px #00000029;
+  border-radius: 3px;
+  padding: 50px 70px;
+  background: #e5f4f8;
+  text-align: center;
+
+  @media #{$sp} {
+    padding: 30px 15px;
+  }
+
+  .card-heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+    margin-bottom: 40px;
+    @media #{$sp} {
+      gap: 10px;
+      display: grid;
+    }
+
+    .card-index {
+      background-color: #000000;
+      color: $white-color;
+      border-radius: 25px;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 3px 33px;
+
+      @media #{$sp} {
+        width: 50%;
+        margin: auto;
+      }
+    }
+    .card-issue-title {
+      font-size: 20px;
+      font-weight: bold;
+      color: $primary-color;
+      position: relative;
+
+      span {
+        background: linear-gradient(
+          to bottom,
+          transparent 70%,
+          $yellow-color 30%
+        );
+      }
+    }
+  }
+
+  .card-solution-title {
+    font-size: 24px;
+    color: #004097;
+    font-weight: bold;
+    margin: 30px 0px;
+
+    span {
+      background: linear-gradient(
+        to bottom,
+        transparent 70%,
+        $yellow-color 30%
+      );
+    }
+  }
+
+  .card-solution-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+
+    @media #{$sp} {
+      grid-template-columns: auto;
+    }
+
+    &__img {
+      width: 100%;
+    }
+
+    &__text {
+      padding-top: 20px;
+      @media #{$sp} {
+        padding-top: 0;
+      }
+    }
+  }
+
+  .triangle {
+    width: 0;
+    height: 0;
+    border-left: 60px solid rgba(0, 0, 0, 0);
+    border-right: 60px solid rgba(0, 0, 0, 0);
+    border-top: 49px solid $primary-color;
+    margin: auto;
+  }
+}
+
 // Card item01
 .card-item01 {
   margin-bottom: 30px;
