--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -176,6 +176,25 @@
           }
         }
       }
+
+      &-right-sp {
+        .info-list {
+          color: $white-color;
+          text-align: left;
+          margin: auto;
+          width: 85%;
+          font-size: 20px;
+          font-weight: 700;
+          display: grid;
+          gap: 20px;
+
+          .info-item {
+            padding: 0 5px;
+            background: $primary-color;
+            border-radius: 4px;
+          }
+        }
+      }
     }
 
     &__title {
@@ -289,6 +308,13 @@
         iframe {
           width: 100%;
           height: 100%;
+          background-color: #000;
+
+          body {
+            margin: 0;
+            padding: 0;
+            background: transparent;
+          }
         }
       }
 
@@ -341,72 +367,21 @@
     padding: 70px 0;
 
     @media #{$sp} {
-      padding-top: 0;
+      padding: 35px 15px;
     }
 
-    .section-quaternary-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .card {
-        position: relative;
-        width: 360px;
-        border-radius: 3px;
-        box-shadow: 0px 3px 20px #0000001c;
-        .card-title {
-          width: 100%;
-          display: flex;
-          .step-no {
-            font-size: 16px;
-            font-weight: 500;
-            color: $white-color;
-            padding: 20px 13px;
-            background: $gradient-bg-2;
-          }
-          .step-title {
-            width: 100%;
-            text-align: center;
-            color: $black-color;
-            font-size: 18px;
-            font-weight: bold;
-            background-color: $blue-color-2;
-            padding: 17px 0;
-          }
-        }
-        .card-content {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          padding: 30px 30px 60px 30px;
-          .tag {
-            display: inline-block;
-            color: $white-color;
-            font-size: 16px;
-            font-weight: bold;
-            padding: 3px 38px;
-            border-radius: 20px;
-            background-color: $primary-color;
-            &.outline {
-              color: $green-color-2;
-              background-color: transparent;
-              border: 2px solid $green-color-2;
-            }
-          }
-          img {
-            width: 119px;
-            object-fit: contain;
-            margin: 30px 0;
-          }
-          .card-description {
-            font-size: 16px;
-            .text-note {
-              color: $gray-color-8;
-              font-size: 13px;
-              line-height: 20px;
-              font-weight: bold;
-            }
-          }
-        }
+    .container {
+      @media #{$sp} {
+        margin: 0 -15px;
+      }
+    }
+
+    .saison-feature-list {
+      display: grid;
+      gap: 40px;
+
+      @media #{$sp} {
+        gap: 20px;
       }
     }
   }
@@ -511,11 +486,11 @@
       flex-direction: column;
 
       &.seagreen {
-        background-color: #25A5A5;
+        background-color: #25a5a5;
       }
 
       &.green {
-        background-color: #44B397;
+        background-color: #44b397;
       }
 
       &-name {
@@ -540,7 +515,6 @@
           font-size: 32px;
         }
       }
-
     }
 
     .section-more {
@@ -559,8 +533,6 @@
       padding: 50px 15px;
     }
   }
-
-
 
   // ===========END SECTIONS==========
 
