fix path saison voice page

--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -18,26 +18,34 @@
 
 {% set menuSidebar = [
   {
-    text: "年会費・入会資格",
-    link: "#"
+    text: "TOP",
+    link: "#top"
   }, {
-    text: "付帯サービス",
-    link: "#"
+    text: "セゾンインボイスとは",
+    link: "#saison-invoice"
   }, {
-    text: "ご利用シーン",
-    link: "#"
+    text: "セゾンインボイスの特長",
+    link: "#feature"
   }, {
-    text: "カード比較",
-    link: "#"
+    text: "類似サービスとの違い",
+    link: "#services"
   }, {
+    text: "ご利用者様の声",
+    link: "#comment"
+  }, {
+    text: "ご利用までの流れ",
+    link: "#usage"
+  }, {
+    text: "ご利用料金",
+    link: "#fee"
+  },
+  {
     text: "よくある質問",
     link: "#faq"
-  }, {
-    text: "お申し込みまでの流れ",
-    link: "#"
-  }, {
+  },
+  {
     text: "お申し込み",
-    link: "#"
+    link: "#application"
   }
 ] %}
 
@@ -103,7 +111,7 @@
     </div>
   </section>
 
-    <section class="section-primary fadein">
+    <section id="saison-invoice" class="section-primary fadein">
       <h4 class="ttl-secondary">セゾンインボイスとは</h4>
       <h2 class="ttl-primary">BtoB向け後払い決済・請求代⾏サービスです。</h2>
       <p class="ttl-tertiary">BtoB決済における請求/回収業務のすべてを代⾏。</br>『請求/回収業務の削減』『未回収リスクゼロ』『売掛⾦の回収期間短縮』を実現できます。</h5>
@@ -172,7 +180,7 @@
       </div>
     </section>
 
-    <section class="section-secondary fadein">
+    <section id="feature"  class="section-secondary fadein">
       <div class="container">
         <h4 class="ttl-secondary">セゾンインボイスの仕組み</h4>
         <h2 class="ttl-primary">顧客・取引データを入力したら、あとはお任せ下さい。</h2>
@@ -277,7 +285,7 @@
       </div>
     </section>
 
-    <section class="section-quaternary fadein">
+    <section id="feature" class="section-quaternary fadein">
       <h4 class="ttl-secondary">セゾンインボイスの特長</h4>
       <h2 class="ttl-primary">請求・回収代行はもちろん、キッシュフロー改善もサポート</h2>
       <div class="container">
@@ -335,7 +343,7 @@
       </div>
     </section>
 
-    <section class="section-quinary fadein">
+    <section id="services" class="section-quinary fadein">
       <div class="container">
         <h4 class="ttl-secondary">類似サービスとの違い</h4>
         <h2 class="ttl-primary">請求・回収業務の効率化+キャッシュフロー改善</h2>
@@ -385,7 +393,7 @@
       </div>
     </section>
 
-    <section class="section-flow bg-gray">
+    <section id="usage" class="section-flow bg-gray">
       <div class="container">
         <h4 class="ttl-secondary">ご利用までの流れ</h4>
         <h2 class="ttl-primary">ご利用開始までは３ステップのみ。</h2>
@@ -431,7 +439,7 @@
       </div>
     </section>
 
-    <section class="section-usage fadein">
+    <section id="fee" class="section-usage fadein">
       <div class="container">
         <h4 class="ttl-secondary">ご利用料金</h4>
         <h2 class="ttl-primary">月額固定費0円・手数料率は業界最低水準！</h2>
@@ -512,7 +520,7 @@
       </a>
     </section>
 
-    <section id="material" class="section-contact fadein">
+    <section id="application" class="section-contact fadein">
       <div class="card-type22">
         <div class="ttl-notice">CONTACT</div>
         <h3 class="ttl-tertiary">セゾンインボイスをご検討中の方へ</h3>
