--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -629,6 +629,7 @@
         .card-type10 {
           box-shadow: 0px 3px 20px #0000001c;
           border-radius: 3px;
+          height: 100%;
 
           .ttl-senary {
             -webkit-line-clamp: unset;
