--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -361,33 +361,41 @@
       <div class="list__wrapper">
         <div class="containers">
           <ul class="inherit card-list">
-            <div class="card-type10">
-              <h5 class="ttl-quinary">
-                コワーキングスペース運営会社　様
-              </h5>
-              <h6 class="ttl-senary">
-                請求業務に十分な人員を割く事ができず、請求・回収・督促業務の効率化が課題。</br>
-                新たな人員を追加することなく請求体制を構築できた上、毎月一定数発生する督促・回収対応もセゾンインボイスへアウトソースすることで効率化できました。
-              </h6>
-            </div>
-            <div class="card-type10">
-              <h5 class="ttl-quinary">
-                広告代理店会社　様
-              </h5>
-              <h6 class="ttl-senary">
-                事業拡大に伴い、手元の運転資金の確保を思案していた中、手間のかかる融資ではない方法で何か方法がないか探していました。</br>
-                セゾンインボイスを活用することで、毎月数千万円の売掛金回収に30日〜60日かかっていたところが1日に短縮されました。事業拡大に向けて手元資金の心配がなくなりました。
-              </h6>
-            </div>
-            <div class="card-type10">
-              <h5 class="ttl-quinary">
-                OA機器販売・電力会社　様
-              </h5>
-              <h6 class="ttl-senary">
-                もともと光コラボや、トナー事業の発注・請求をマンパワーで処理していましたが、徐々に当社の新しいサービスが増えていく中で、金額もお取引先様も増加し、担当者の負担が増えていきました。</br>
-                請求書の発行、代金の回収、督促、問い合わせ対応まで全てやってくれるおかげで、営業担当の時間を作りだすことができ、非常に業務削減につながりました。
-              </h6>
-            </div>
+            <a href="#">
+              <div class="card-type10">
+                <h5 class="ttl-quinary">
+                  コワーキングスペース運営会社　様
+                </h5>
+                <h6 class="ttl-senary">
+                  請求業務に十分な人員を割く事ができず、請求・回収・督促業務の効率化が課題。</br>
+                  新たな人員を追加することなく請求体制を構築できた上、毎月一定数発生する督促・回収対応もセゾンインボイスへアウトソースすることで効率化できました。
+                </h6>
+              </div>
+            </a>
+
+            <a href="#">
+              <div class="card-type10">
+                <h5 class="ttl-quinary">
+                  広告代理店会社　様
+                </h5>
+                <h6 class="ttl-senary">
+                  事業拡大に伴い、手元の運転資金の確保を思案していた中、手間のかかる融資ではない方法で何か方法がないか探していました。</br>
+                  セゾンインボイスを活用することで、毎月数千万円の売掛金回収に30日〜60日かかっていたところが1日に短縮されました。事業拡大に向けて手元資金の心配がなくなりました。
+                </h6>
+              </div>
+            </a>
+
+            <a href="#">
+              <div class="card-type10">
+                <h5 class="ttl-quinary">
+                  OA機器販売・電力会社　様
+                </h5>
+                <h6 class="ttl-senary">
+                  もともと光コラボや、トナー事業の発注・請求をマンパワーで処理していましたが、徐々に当社の新しいサービスが増えていく中で、金額もお取引先様も増加し、担当者の負担が増えていきました。</br>
+                  請求書の発行、代金の回収、督促、問い合わせ対応まで全てやってくれるおかげで、営業担当の時間を作りだすことができ、非常に業務削減につながりました。
+                </h6>
+              </div>
+            </a>
           </ul>
         </div>
       </div>
@@ -448,21 +456,23 @@
       <div class="list__wrapper">
         <div class="containers">
           <ul class="inherit card-list">
-            <li class="scene">
+            <a href="#" class="scene">
               <h4 class="ttl-quaternary scene-name">月額費用</h4>
               <h3 class="scene-desc">機能制限なし。</br>ずっと</h3>
-              <p class="scene-cost"><span>￥</span>0</h3>
-            </li>
-            <li class="scene seagreen">
+              <p class="scene-cost"><span>￥</span>0</p>
+            </a>
+
+            <a href="#" class="scene seagreen">
               <h4 class="ttl-quaternary scene-name">手数料（目安）</h4>
               <h3 class="scene-desc">取引金額の</h3>
-              <p class="scene-cost">1.5 ~ 5.5%</h3>
-            </li>
-            <li class="scene green">
+              <p class="scene-cost">1.5 ~ 5.5%</p>
+            </a>
+
+            <a href="#" class="scene green">
               <h4 class="ttl-quaternary scene-name">1請求ごとの事務手数料</h4>
               <h3 class="scene-desc">メール送付の場合</h3>
-              <p class="scene-cost"><span>￥</span>0</h3>
-            </li>
+              <p class="scene-cost"><span>￥</span>0</p>
+            </a>
           </ul>
         </div>
       </div>
